# saw_elastic_predictions

./: README.md  example_ni3al.py  example_script.py  pyproject.toml  scratch_nb.ipynb  setup.py
SAW_Code/: Au_SRIM.m  C_modifi.m  Cu_SAW.m  Euler2matrix.m  Ni3Al_SAW.m  displacement_example.m  euler_database.m  euler_to_cart.m  getBulk.m  getCijkl.m  getDensity.m  getDisplacement.m  material_database.m
matlab_test/: H_L_Peak.m  Matrix2Euler.m  Ni3Al_SAW.m  Ni3Al_SAW_111_data.txt  deltaij.m  getDisplacementIso.m  getGamma_ik.m  getSAW.asv  getSAW.m
saw_elastic_predictions/: euler_transformations.py  materials.py  orientations.py  saw_calculator.py
src/: combined_matlab_code.m  euler_transformations.py  materials.py  saw_calculator.py
tests/: basic_analysis.py  old_working_analysis.py  requirements-test.txt  saw_upsample_rot.py  test_analysis.py  test_saw_calculator.py
